Fixed some spacing.

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -237,6 +237,7 @@
   margin-bottom: $spacing-unit / 2;
   > ul {
       margin-left: 0;
+      margin-bottom: $spacing-unit / 8;
       list-style: none;
       > li {
 	  margin-right: $spacing-unit / 4;
